2011-05-02  Abhishek Arya  <inferno@chromium.org>

        Unreviewed.

        Remove passing tests after rebaselines from r85365.

        * platform/chromium/test_expectations.txt:

2011-05-02  Dan Bernstein  <mitz@apple.com>

        Reviewed by Simon Fraser.

        <rdar://problem/7972529> Images with percentage based height/max-height are missing when they are inside blocks inside tables
        https://bugs.webkit.org/show_bug.cgi?id=58006

        * fast/replaced/table-percent-height-expected.txt: Updated.
        * fast/replaced/table-percent-height.html: Added a test case with a replaced object nested in an
        auto-height block inside a table cell.

2011-05-02  Daniel Bates  <dbates@webkit.org>

        Reviewed by Sam Weinig.

        Convert manual test onblur-remove.html to a DRT test; onblur-remove.html fails
        https://bugs.webkit.org/show_bug.cgi?id=59379

        Make onblur-remove.html a DRT test. As of 04/25/2011 this test fails. See bug #59379
        for more details.

        * fast/events/onblur-remove-expected.txt: Added; expected failure results.
        * fast/events/onblur-remove.html: Copied from Source/WebCore/manual-tests/onblur-remove.html.

2011-05-02  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Eric Seidel.

        [GTK] editing/selection/select-out-of-editable.html failing after r83967
        https://bugs.webkit.org/show_bug.cgi?id=58667

        * platform/gtk/Skipped: Unskip a test which is now passing.

2011-05-02  Jessie Berlin  <jberlin@apple.com>

        REGRESSION (r83928 or before): Some tests failing assertions in MarkStack::internalAppend
        / MarkStack::drain.
        https://bugs.webkit.org/show_bug.cgi?id=58657

        Add inspector/styles/styles-cancel-editing.html to the Windows XP Skipped list because it
        has been crashing under MarkStack::drain on the Windows XP bots.

        * platform/win-xp/Skipped:

2011-05-02  Csaba Osztrogonác  <ossy@webkit.org>
