@@ -1,3 +1,14 @@
+2011-05-02  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        convert manual-tests/bugzilla-6821.html to a layout test
+        https://bugs.webkit.org/show_bug.cgi?id=59404
+
+        Test: fast/css/hover-update.html
+
+        * manual-tests/bugzilla-6821.html: Removed.
+
 2011-05-02  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Anders Carlsson.
