@@ -1,3 +1,13 @@
+2011-05-02  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Kent Tamura.
+
+        convert manual-tests/bugzilla-6821.html to a layout test
+        https://bugs.webkit.org/show_bug.cgi?id=59404
+
+        * fast/css/hover-update-expected.txt: Added.
+        * fast/css/hover-update.html: Added.
+
 2011-05-02  Abhishek Arya  <inferno@chromium.org>
 
         Unreviewed.
